# OBS-Overtime

./: CMakeLists.txt  README.md  buildspec.json
cmake/common/: bootstrap.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake
data/locale/: en-US.ini
scripts/: build-windows.ps1  fix-qt-keywords.ps1
src/: media-dock.cpp  media-dock.hpp  media-manager.cpp  media-manager.hpp  overlay-controller.cpp  overlay-controller.hpp  overlay-window.cpp  overlay-window.hpp  plugin-config.cpp  plugin-config.hpp  plugin-main.cpp  projector-tracker.cpp  projector-tracker.hpp  settings-dialog.cpp  settings-dialog.hpp  time-utils.cpp  time-utils.hpp
